--- a/Frotend/index.html
+++ b/Frotend/index.html
@@ -1,49 +1,69 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-...your-integrity-hash-here..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>My App</title>
+  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/menu.css" rel="stylesheet">
+</head>
 
-    <title>My App</title>
+<body>
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
+  
+  <!-- Logo -->
+  <label class="logo">
+    H2O <i class="fa fa-braille" aria-hidden="true"></i> CODING
+  </label>
+  
+  <!-- Main Menu -->
+  <ul class="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">Contact</a></li>
+    
+    <!-- Dropdown Menu -->
+    <div class="right-menu" style="text-align: right;"> 
+      <li class="dropdown">
+        <a class="dropdown-toggle" id="fname" data-bs-toggle="dropdown" aria-expanded="false">
+          ...<i class="caret-down"></i>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">เปลี่ยนรหัส</a></li>
+        </ul>
+      </li>    
+      
+      <li class="Logout">
+        <a class="" onclick="logout()">Logout</a>
+      </li>
+    </div>
+  </nav>
 
-    <link href="./css/index.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-mynav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">My App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="fname" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                ...
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" onclick="logout()">Logout</a></li>
-              </ul>
-            </li>
-        </div>
-      </div>
-    </nav>
-
+  <!-- Background Section -->
+  <section>
     <div class="container-fluid p-3">
       <div class="card">
-        <!-- <img class="p-2" src="user.png" id="avatar" width="200"> -->
         <div class="card-body">
-          <p class="card-text" id="username">...</p>
+          <p class="card-text" id="username">Username: John Doe</p>
         </div>
       </div>
     </div>
+  </section>
+</body>
 
-    <script src="./javaScript/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="./javaScript/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
-  </body>
 </html>
