--- a/Frotend/index.html
+++ b/Frotend/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-...your-integrity-hash-here..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>My App</title>
+  <title>My Portfolio</title>
   <link href="./css/index.css" rel="stylesheet">
   <link href="./css/menu.css" rel="stylesheet">
 </head>
@@ -29,13 +29,13 @@
   <!-- Main Menu -->
   <ul class="menu">
     <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="#">Portfolio</a></li>
     <li><a href="#">Services</a></li>
     <li><a href="#">Contact</a></li>
     
     <!-- Dropdown Menu -->
     <div class="right-menu" style="text-align: right;"> 
-      <li class="dropdown">
+      <li class="dropdown" style="color: aliceblue;">Username
         <a class="dropdown-toggle" id="fname" data-bs-toggle="dropdown" aria-expanded="false">
           ...<i class="caret-down"></i>
         </a>
@@ -52,13 +52,13 @@
 
   <!-- Background Section -->
   <section>
-    <div class="container-fluid p-3">
+    <!-- <div class="container-fluid p-3">
       <div class="card">
         <div class="card-body">
           <p class="card-text" id="username">Username: John Doe</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 </body>
 
