--- a/Frotend/customer_register/index.html
+++ b/Frotend/customer_register/index.html
@@ -1,11 +1,120 @@
-<!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="menu.css" />
     <title>Customer Register</title>
+
 </head>
+
 <body>
-    
+    <div class="menu-bar">
+        <h1 class="logo">Lek MY <span>Code.</span></h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">ขายสินค้า <i class="fas fa-caret-down"></i></a>
+
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="#">POS</a></li>
+                        <li><a href="#">ลงทะเบียนลูกค้า <i class="fas fa-caret-right"></i></a>
+
+                            <div class="dropdown-menu-1">
+                                <ul>
+                                    <li><a href="http://127.0.0.1:5500/Frotend/customer_register/index.html">โปรแกรมลงทะเบียนข้อมูลลูกค้า</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li><a href="#">สินค้า</a></li>
+                        <li><a href="#">จัดการบิลจอง</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Stcok <i class="fas fa-caret-down"></i></a>
+
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li>
+                            <a href="#">Team <i class="fas fa-caret-right"></i></a>
+
+                            <div class="dropdown-menu-1">
+                                <ul>
+                                    <li><a href="#">Team-1</a></li>
+                                </ul>
+                            </div>
+
+                        </li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">การเงิน <i class="fas fa-caret-down"></i></a>
+
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li>
+                            <a href="#">Team <i class="fas fa-caret-right"></i></a>
+
+                            <div class="dropdown-menu-1">
+                                <ul>
+                                    <li><a href="#">Team-1</a></li>
+                                </ul>
+                            </div>
+
+                        </li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">รายงาน <i class="fas fa-caret-down"></i></a>
+
+                <div class="dropdown-menu">
+                    <ul>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li>
+                            <a href="#">Team <i class="fas fa-caret-right"></i></a>
+
+                            <div class="dropdown-menu-1">
+                                <ul>
+                                    <li><a href="#">Team-1</a></li>
+                                </ul>
+                            </div>
+
+                        </li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Username</a></li>
+
+            <li><a  id="username">.... <i class="fas fa-caret-down"></i></a>
+
+                <div class="dropdown-menu">
+
+                    <ul>
+                        <li><a href="#">เปลี่ยนรหัส</a></li>
+                    </ul>
+
+                </div>
+            </li>
+            <li><a onclick="logout()">Logout</a></li>
+        </ul>
+    </div>
+    <div class="hero">
+        &nbsp;
+
+    </div>
+
+    <script src="/Frotend/javaScript/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
